Metaprogramming/@codeme@/Entity mapping/output/EntityMappingParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.4
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.4 E:\\Software\\ANTLR3\\projects\\EntityMapping\\EntityMapping.g 2012-04-20 08:32:14

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019


   using System;
   using System.Collections;


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

namespace  EntMapping 
{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.4")]
[System.CLSCompliant(false)]
public partial class EntityMappingParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "ASSIGN", "CALL", "CHAR", "COMMENT", "COND", "DEC", "DIV", "ENTMAP", "EQUALS", "ESC_SEQ", "EXPONENT", "FLOAT", "GETMEMBER", "GT", "GTEQ", "HEX_DIGIT", "ID", "INC", "INT", "LT", "LTEQ", "MAPBODY", "MAPDCL", "MINUS", "MOD", "MULT", "NOT", "NOTEQUALS", "OCTAL_ESC", "OR", "PLUS", "STRING", "TFEXPR", "UNICODE_ESC", "WS", "'('", "')'", "','", "'.'", "';'", "'<-'", "'='", "'IF'"
	};
	public const int EOF=-1;
	public const int T__40=40;
	public const int T__41=41;
	public const int T__42=42;
	public const int T__43=43;
	public const int T__44=44;
	public const int T__45=45;
	public const int T__46=46;
	public const int T__47=47;
	public const int AND=4;
	public const int ASSIGN=5;
	public const int CALL=6;
	public const int CHAR=7;
	public const int COMMENT=8;
	public const int COND=9;
	public const int DEC=10;
	public const int DIV=11;
	public const int ENTMAP=12;
	public const int EQUALS=13;
	public const int ESC_SEQ=14;
	public const int EXPONENT=15;
	public const int FLOAT=16;
	public const int GETMEMBER=17;
	public const int GT=18;
	public const int GTEQ=19;
	public const int HEX_DIGIT=20;
	public const int ID=21;
	public const int INC=22;
	public const int INT=23;
	public const int LT=24;
	public const int LTEQ=25;
	public const int MAPBODY=26;
	public const int MAPDCL=27;
	public const int MINUS=28;
	public const int MOD=29;
	public const int MULT=30;
	public const int NOT=31;
	public const int NOTEQUALS=32;
	public const int OCTAL_ESC=33;
	public const int OR=34;
	public const int PLUS=35;
	public const int STRING=36;
	public const int TFEXPR=37;
	public const int UNICODE_ESC=38;
	public const int WS=39;

	public EntityMappingParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public EntityMappingParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		ITreeAdaptor treeAdaptor = default(ITreeAdaptor);
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();
		OnCreated();
	}
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return EntityMappingParser.tokenNames; } }
	public override string GrammarFileName { get { return "E:\\Software\\ANTLR3\\projects\\EntityMapping\\EntityMapping.g"; } }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	partial void EnterRule_prog();
	partial void LeaveRule_prog();

	// $ANTLR start "prog"
	// E:\\Software\\ANTLR3\\projects\\EntityMapping\\EntityMapping.g:28:8: public prog : mapDeclaration ( stat )* -> ^( ENTMAP mapDeclaration ^( MAPBODY ( stat )* ) ) ;
	[GrammarRule("prog")]
	public AstParserRuleReturnScope<CommonTree, IToken> prog()
	{
		EnterRule_prog();
		EnterRule("prog", 1);
		TraceIn("prog", 1);
		AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		AstParserRuleReturnScope<CommonTree, IToken> mapDeclaration1 = default(AstParserRuleReturnScope<CommonTree, IToken>);
		AstParserRuleReturnScope<CommonTree, IToken> stat2 = default(AstParserRuleReturnScope<CommonTree, IToken>);

		RewriteRuleSubtreeStream stream_mapDeclaration=new RewriteRuleSubtreeStream(adaptor,"rule mapDeclaration");
		RewriteRuleSubtreeStream stream_stat=new RewriteRuleSubtreeStream(adaptor,"rule stat");
		try { DebugEnterRule(GrammarFileName, "prog");
		DebugLocation(28, 82);
		try
		{
			// E:\\Software\\ANTLR3\\projects\\EntityMapping\\EntityMapping.g:28:13: ( mapDeclaration ( stat )* -> ^( ENTMAP mapDeclaration ^( MAPBODY ( stat )* ) ) )
			DebugEnterAlt(1);
			// E:\\Software\\ANTLR3\\projects\\EntityMapping\\EntityMapping.g:28:15: mapDeclaration ( stat )*
			{
			DebugLocation(28, 15);
			PushFollow(Follow._mapDeclaration_in_prog108);
			mapDeclaration1=mapDeclaration();
			PopFollow();

			stream_mapDeclaration.Add(mapDeclaration1.Tree);
			DebugLocation(28, 30);
			// E:\\Software\\ANTLR3\\projects\\EntityMapping\\EntityMapping.g:28:30: ( stat )*
			try { DebugEnterSubRule(1);
			while (true)
			{
				int alt1=2;
				try { DebugEnterDecision(1, false);
				int LA1_0 = input.LA(1);

				if ((LA1_0==ID))
				{
					alt1 = 1;
				}


				} finally { DebugExitDecision(1); }
				switch ( alt1 )
				{
				case 1:
					DebugEnterAlt(1);
					// E:\\Software\\ANTLR3\\projects\\EntityMapping\\EntityMapping.g:28:30: stat
					{
					DebugLocation(28, 30);
					PushFollow(Follow._stat_in_prog110);
					stat2=stat();
					PopFollow();

					stream_stat.Add(stat2.Tree);

					}
					break;

				default:
					goto loop1;
				}
			}

			loop1:
				;

			} finally { DebugExitSubRule(1); }



			{
			// AST REWRITE
			// elements: mapDeclaration, stat
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (CommonTree)adaptor.Nil();
			// 28:36: -> ^( ENTMAP mapDeclaration ^( MAPBODY ( stat )* ) )
			{
				DebugLocation(28, 39);
				// E:\\Software\\ANTLR3\\projects\\EntityMapping\\EntityMapping.g:28:39: ^( ENTMAP mapDeclaration ^( MAPBODY ( stat )* ) )
				{
				CommonTree root_1 = (CommonTree)adaptor.Nil();
				DebugLocation(28, 41);
				root_1 = (CommonTree)adaptor.BecomeRoot((CommonTree)adaptor.Create(ENTMAP, "ENTMAP"), root_1);

				DebugLocation(28, 48);
				adaptor.AddChild(root_1, stream_mapDeclaration.NextTree());
				DebugLocation(28, 63);
				// E:\\Software\\ANTLR3\\projects\\EntityMapping\\EntityMapping.g:28:63: ^( MAPBODY ( stat )* )
				{
				CommonTree root_2 = (CommonTree)adaptor.Nil();
				DebugLocation(28, 65);
				root_2 = (CommonTree)adaptor.BecomeRoot((CommonTree)adaptor.Create(MAPBODY, "MAPBODY"), root_2);

				DebugLocation(28, 73);
				// E:\\Software\\ANTLR3\\projects\\EntityMapping\\EntityMapping.g:28:73: ( stat )*
				while ( stream_stat.HasNext )
				{
					DebugLocation(28, 73);
					adaptor.AddChild(root_2, stream_stat.NextTree());

				}
				stream_stat.Reset();

				adaptor.AddChild(root_1, root_2);
				}

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("prog", 1);
			LeaveRule("prog", 1);
			LeaveRule_prog();
		}
		DebugLocation(28, 82);
		} finally { DebugExitRule(GrammarFileName, "prog"); }
		return retval;

	}
	// $ANTLR end "prog"

	partial void EnterRule_mapDeclaration();
	partial void LeaveRule_mapDeclaration();

	// $ANTLR start "mapDeclaration"
	// E:\\Software\\ANTLR3\\projects\\EntityMapping\\EntityMapping.g:30:1: mapDeclaration : ID '<-' ID ';' -> ^( MAPDCL ID ID ) ;
	[GrammarRule("mapDeclaration")]
	private AstParserRuleReturnScope<CommonTree, IToken> mapDeclaration()
	{
		EnterRule_mapDeclaration();
		EnterRule("mapDeclaration", 2);
		TraceIn("mapDeclaration", 2);
		AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		IToken ID3 = default(IToken);
		IToken string_literal4 = default(IToken);
		IToken ID5 = default(IToken);
		IToken char_literal6 = default(IToken);

		CommonTree ID3_tree = default(CommonTree);
		CommonTree string_literal4_tree = default(CommonTree);
		CommonTree ID5_tree = default(CommonTree);
		CommonTree char_literal6_tree = default(CommonTree);
		RewriteRuleITokenStream stream_45=new RewriteRuleITokenStream(adaptor,"token 45");
		RewriteRuleITokenStream stream_44=new RewriteRuleITokenStream(adaptor,"token 44");
		RewriteRuleITokenStream stream_ID=new RewriteRuleITokenStream(adaptor,"token ID");
		try { DebugEnterRule(GrammarFileName, "mapDeclaration");
		DebugLocation(30, 51);
		try
		{
			// E:\\Software\\ANTLR3\\projects\\EntityMapping\\EntityMapping.g:30:16: ( ID '<-' ID ';' -> ^( MAPDCL ID ID ) )
			DebugEnterAlt(1);
			// E:\\Software\\ANTLR3\\projects\\EntityMapping\\EntityMapping.g:30:18: ID '<-' ID ';'
			{
			DebugLocation(30, 18);
			ID3=(IToken)Match(input,ID,Follow._ID_in_mapDeclaration137);  
			stream_ID.Add(ID3);

			DebugLocation(30, 21);
			string_literal4=(IToken)Match(input,45,Follow._45_in_mapDeclaration139);  
			stream_45.Add(string_literal4);

			DebugLocation(30, 26);
			ID5=(IToken)Match(input,ID,Follow._ID_in_mapDeclaration141);  
			stream_ID.Add(ID5);

			DebugLocation(30, 29);
			char_literal6=(IToken)Match(input,44,Follow._44_in_mapDeclaration143);  
			stream_44.Add(char_literal6);



			{
			// AST REWRITE
			// elements: ID, ID
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (CommonTree)adaptor.Nil();
			// 30:33: -> ^( MAPDCL ID ID )
			{
				DebugLocation(30, 36);
				// E:\\Software\\ANTLR3\\projects\\EntityMapping\\EntityMapping.g:30:36: ^( MAPDCL ID ID )
				{
				CommonTree root_1 = (CommonTree)adaptor.Nil();
				DebugLocation(30, 38);
				root_1 = (CommonTree)adaptor.BecomeRoot((CommonTree)adaptor.Create(MAPDCL, "MAPDCL"), root_1);

				DebugLocation(30, 45);
				adaptor.AddChild(root_1, stream_ID.NextNode());
				DebugLocation(30, 48);
				adaptor.AddChild(root_1, stream_ID.NextNode());

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("mapDeclaration", 2);
			LeaveRule("mapDeclaration", 2);
			LeaveRule_mapDeclaration();
		}
		DebugLocation(30, 51);
		} finally { DebugExitRule(GrammarFileName, "mapDeclaration"); }
		return retval;

	}
	// $ANTLR end "mapDeclaration"

	partial void EnterRule_stat();
	partial void LeaveRule_stat();

	// $ANTLR start "stat"
	// E:\\Software\\ANTLR3\\projects\\EntityMapping\\EntityMapping.g:32:1: stat : ID '=' expr ';' -> ^( ASSIGN ID expr ) ;
	[GrammarRule("stat")]
	private AstParserRuleReturnScope<CommonTree, IToken> stat()
	{
		EnterRule_stat();
		EnterRule("stat", 3);
		TraceIn("stat", 3);
		AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		IToken ID7 = default(IToken);
		IToken char_literal8 = default(IToken);
		IToken char_literal10 = default(IToken);
		AstParserRuleReturnScope<CommonTree, IToken> expr9 = default(AstParserRuleReturnScope<CommonTree, IToken>);

		CommonTree ID7_tree = default(CommonTree);
		CommonTree char_literal8_tree = default(CommonTree);
		CommonTree char_literal10_tree = default(CommonTree);
		RewriteRuleITokenStream stream_44=new RewriteRuleITokenStream(adaptor,"token 44");
		RewriteRuleITokenStream stream_46=new RewriteRuleITokenStream(adaptor,"token 46");
		RewriteRuleITokenStream stream_ID=new RewriteRuleITokenStream(adaptor,"token ID");
		RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");
		try { DebugEnterRule(GrammarFileName, "stat");
		DebugLocation(32, 43);
		try
		{
			// E:\\Software\\ANTLR3\\projects\\EntityMapping\\EntityMapping.g:32:6: ( ID '=' expr ';' -> ^( ASSIGN ID expr ) )
			DebugEnterAlt(1);
			// E:\\Software\\ANTLR3\\projects\\EntityMapping\\EntityMapping.g:32:8: ID '=' expr ';'
			{
			DebugLocation(32, 8);
			ID7=(IToken)Match(input,ID,Follow._ID_in_stat162);  
			stream_ID.Add(ID7);

			DebugLocation(32, 11);
			char_literal8=(IToken)Match(input,46,Follow._46_in_stat164);  
			stream_46.Add(char_literal8);

			DebugLocation(32, 15);
			PushFollow(Follow._expr_in_stat166);
			expr9=expr();
			PopFollow();

			stream_expr.Add(expr9.Tree);
			DebugLocation(32, 20);
			char_literal10=(IToken)Match(input,44,Follow._44_in_stat168);  
			stream_44.Add(char_literal10);



			{
			// AST REWRITE
			// elements: expr, ID
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (CommonTree)adaptor.Nil();
			// 32:24: -> ^( ASSIGN ID expr )
			{
				DebugLocation(32, 27);
				// E:\\Software\\ANTLR3\\projects\\EntityMapping\\EntityMapping.g:32:27: ^( ASSIGN ID expr )
				{
				CommonTree root_1 = (CommonTree)adaptor.Nil();
				DebugLocation(32, 29);
				root_1 = (CommonTree)adaptor.BecomeRoot((CommonTree)adaptor.Create(ASSIGN, "ASSIGN"), root_1);

				DebugLocation(32, 36);
				adaptor.AddChild(root_1, stream_ID.NextNode());
				DebugLocation(32, 39);
				adaptor.AddChild(root_1, stream_expr.NextTree());

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("stat", 3);
			LeaveRule("stat", 3);
			LeaveRule_stat();
		}
		DebugLocation(32, 43);
		} finally { DebugExitRule(GrammarFileName, "stat"); }
		return retval;

	}
	// $ANTLR end "stat"

	partial void EnterRule_expr();
	partial void LeaveRule_expr();

	// $ANTLR start "expr"
	// E:\\Software\\ANTLR3\\projects\\EntityMapping\\EntityMapping.g:34:1: expr : boolAndExpr ( OR ^ boolAndExpr )* ;
	[GrammarRule("expr")]
	private AstParserRuleReturnScope<CommonTree, IToken> expr()
	{
		EnterRule_expr();
		EnterRule("expr", 4);
		TraceIn("expr", 4);
		AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		IToken OR12 = default(IToken);
		AstParserRuleReturnScope<CommonTree, IToken> boolAndExpr11 = default(AstParserRuleReturnScope<CommonTree, IToken>);
		AstParserRuleReturnScope<CommonTree, IToken> boolAndExpr13 = default(AstParserRuleReturnScope<CommonTree, IToken>);

		CommonTree OR12_tree = default(CommonTree);
		try { DebugEnterRule(GrammarFileName, "expr");
		DebugLocation(34, 37);
		try
		{
			// E:\\Software\\ANTLR3\\projects\\EntityMapping\\EntityMapping.g:34:6: ( boolAndExpr ( OR ^ boolAndExpr )* )
			DebugEnterAlt(1);
			// E:\\Software\\ANTLR3\\projects\\EntityMapping\\EntityMapping.g:34:8: boolAndExpr ( OR ^ boolAndExpr )*
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(34, 8);
			PushFollow(Follow._boolAndExpr_in_expr186);
			boolAndExpr11=boolAndExpr();
			PopFollow();

			adaptor.AddChild(root_0, boolAndExpr11.Tree);
			DebugLocation(34, 20);
			// E:\\Software\\ANTLR3\\projects\\EntityMapping\\EntityMapping.g:34:20: ( OR ^ boolAndExpr )*
			try { DebugEnterSubRule(2);
			while (true)
			{
				int alt2=2;
				try { DebugEnterDecision(2, false);
				int LA2_0 = input.LA(1);

				if ((LA2_0==OR))
				{
					alt2 = 1;
				}


				} finally { DebugExitDecision(2); }
				switch ( alt2 )
				{
				case 1:
					DebugEnterAlt(1);
					// E:\\Software\\ANTLR3\\projects\\EntityMapping\\EntityMapping.g:34:21: OR ^ boolAndExpr
					{
					DebugLocation(34, 23);
					OR12=(IToken)Match(input,OR,Follow._OR_in_expr189); 
					OR12_tree = (CommonTree)adaptor.Create(OR12);
					root_0 = (CommonTree)adaptor.BecomeRoot(OR12_tree, root_0);
					DebugLocation(34, 25);
					PushFollow(Follow._boolAndExpr_in_expr192);
					boolAndExpr13=boolAndExpr();
					PopFollow();

					adaptor.AddChild(root_0, boolAndExpr13.Tree);

					}
					break;

				default:
					goto loop2;
				}
			}

			loop2:
				;

			} finally { DebugExitSubRule(2); }


			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("expr", 4);
			LeaveRule("expr", 4);
			LeaveRule_expr();
		}
		DebugLocation(34, 37);
		} finally { DebugExitRule(GrammarFileName, "expr"); }
		return retval;

	}
	// $ANTLR end "expr"

	partial void EnterRule_boolAndExpr();
	partial void LeaveRule_boolAndExpr();

	// $ANTLR start "boolAndExpr"
	// E:\\Software\\ANTLR3\\projects\\EntityMapping\\EntityMapping.g:36:1: boolAndExpr : equalityExpr ( AND ^ equalityExpr )* ;
	[GrammarRule("boolAndExpr")]
	private AstParserRuleReturnScope<CommonTree, IToken> boolAndExpr()
	{
		EnterRule_boolAndExpr();
		EnterRule("boolAndExpr", 5);
		TraceIn("boolAndExpr", 5);
		AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		IToken AND15 = default(IToken);
		AstParserRuleReturnScope<CommonTree, IToken> equalityExpr14 = default(AstParserRuleReturnScope<CommonTree, IToken>);
		AstParserRuleReturnScope<CommonTree, IToken> equalityExpr16 = default(AstParserRuleReturnScope<CommonTree, IToken>);

		CommonTree AND15_tree = default(CommonTree);
		try { DebugEnterRule(GrammarFileName, "boolAndExpr");
		DebugLocation(36, 47);
		try
		{
			// E:\\Software\\ANTLR3\\projects\\EntityMapping\\EntityMapping.g:36:13: ( equalityExpr ( AND ^ equalityExpr )* )
			DebugEnterAlt(1);
			// E:\\Software\\ANTLR3\\projects\\EntityMapping\\EntityMapping.g:36:15: equalityExpr ( AND ^ equalityExpr )*
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(36, 15);
			PushFollow(Follow._equalityExpr_in_boolAndExpr202);
			equalityExpr14=equalityExpr();
			PopFollow();

			adaptor.AddChild(root_0, equalityExpr14.Tree);
			DebugLocation(36, 28);
			// E:\\Software\\ANTLR3\\projects\\EntityMapping\\EntityMapping.g:36:28: ( AND ^ equalityExpr )*
			try { DebugEnterSubRule(3);
			while (true)
			{
				int alt3=2;
				try { DebugEnterDecision(3, false);
				int LA3_0 = input.LA(1);

				if ((LA3_0==AND))
				{
					alt3 = 1;
				}


				} finally { DebugExitDecision(3); }
				switch ( alt3 )
				{
				case 1:
					DebugEnterAlt(1);
					// E:\\Software\\ANTLR3\\projects\\EntityMapping\\EntityMapping.g:36:29: AND ^ equalityExpr
					{
					DebugLocation(36, 32);
					AND15=(IToken)Match(input,AND,Follow._AND_in_boolAndExpr205); 
					AND15_tree = (CommonTree)adaptor.Create(AND15);
					root_0 = (CommonTree)adaptor.BecomeRoot(AND15_tree, root_0);
					DebugLocation(36, 34);
					PushFollow(Follow._equalityExpr_in_boolAndExpr208);
					equalityExpr16=equalityExpr();
					PopFollow();

					adaptor.AddChild(root_0, equalityExpr16.Tree);

					}
					break;

				default:
					goto loop3;
				}
			}

			loop3:
				;

			} finally { DebugExitSubRule(3); }


			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("boolAndExpr", 5);
			LeaveRule("boolAndExpr", 5);
			LeaveRule_boolAndExpr();
		}
		DebugLocation(36, 47);
		} finally { DebugExitRule(GrammarFileName, "boolAndExpr"); }
		return retval;

	}
	// $ANTLR end "boolAndExpr"

	partial void EnterRule_equalityExpr();
	partial void LeaveRule_equalityExpr();

	// $ANTLR start "equalityExpr"
	// E:\\Software\\ANTLR3\\projects\\EntityMapping\\EntityMapping.g:38:1: equalityExpr : relationalExpr ( ( EQUALS ^| NOTEQUALS ^) relationalExpr )* ;
	[GrammarRule("equalityExpr")]
	private AstParserRuleReturnScope<CommonTree, IToken> equalityExpr()
	{
		EnterRule_equalityExpr();
		EnterRule("equalityExpr", 6);
		TraceIn("equalityExpr", 6);
		AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		IToken EQUALS18 = default(IToken);
		IToken NOTEQUALS19 = default(IToken);
		AstParserRuleReturnScope<CommonTree, IToken> relationalExpr17 = default(AstParserRuleReturnScope<CommonTree, IToken>);
		AstParserRuleReturnScope<CommonTree, IToken> relationalExpr20 = default(AstParserRuleReturnScope<CommonTree, IToken>);

		CommonTree EQUALS18_tree = default(CommonTree);
		CommonTree NOTEQUALS19_tree = default(CommonTree);
		try { DebugEnterRule(GrammarFileName, "equalityExpr");
		DebugLocation(38, 67);
		try
		{
			// E:\\Software\\ANTLR3\\projects\\EntityMapping\\EntityMapping.g:38:14: ( relationalExpr ( ( EQUALS ^| NOTEQUALS ^) relationalExpr )* )
			DebugEnterAlt(1);
			// E:\\Software\\ANTLR3\\projects\\EntityMapping\\EntityMapping.g:38:16: relationalExpr ( ( EQUALS ^| NOTEQUALS ^) relationalExpr )*
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(38, 16);
			PushFollow(Follow._relationalExpr_in_equalityExpr218);
			relationalExpr17=relationalExpr();
			PopFollow();

			adaptor.AddChild(root_0, relationalExpr17.Tree);
			DebugLocation(38, 31);
			// E:\\Software\\ANTLR3\\projects\\EntityMapping\\EntityMapping.g:38:31: ( ( EQUALS ^| NOTEQUALS ^) relationalExpr )*
			try { DebugEnterSubRule(5);
			while (true)
			{
				int alt5=2;
				try { DebugEnterDecision(5, false);
				int LA5_0 = input.LA(1);

				if ((LA5_0==EQUALS||LA5_0==NOTEQUALS))
				{
					alt5 = 1;
				}


				} finally { DebugExitDecision(5); }
				switch ( alt5 )
				{
				case 1:
					DebugEnterAlt(1);
					// E:\\Software\\ANTLR3\\projects\\EntityMapping\\EntityMapping.g:38:32: ( EQUALS ^| NOTEQUALS ^) relationalExpr
					{
					DebugLocation(38, 32);
					// E:\\Software\\ANTLR3\\projects\\EntityMapping\\EntityMapping.g:38:32: ( EQUALS ^| NOTEQUALS ^)
					int alt4=2;
					try { DebugEnterSubRule(4);
					try { DebugEnterDecision(4, false);
					int LA4_0 = input.LA(1);
